--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,7 @@
     "clean": "rimraf build",
     "start": "concurrently \"yarn start:docs\" \"yarn start:webpack\"",
     "start:docs": "docusaurus-start",
-		"start:webpack": "webpack -w -d",
+    "start:webpack": "webpack -w -d",
     "start:webpack-old": "webpack-dev-server -d --content-base ./static/",
     "build": "yarn packs && webpack -p && docusaurus-build",
     "packs": "rimraf ./static/packs && node scripts/copy-packs.js",
@@ -27,6 +27,7 @@
     "wretch": "^1.3.1"
   },
   "devDependencies": {
+    "@types/node": "8.10.20",
     "concurrently": "^3.6.0",
     "docusaurus": "^1.3.0",
     "html-webpack-plugin": "^3.2.0",
