--- a/website/package.json
+++ b/website/package.json
@@ -31,6 +31,7 @@
     "concurrently": "^3.6.0",
     "docusaurus": "^1.3.0",
     "html-webpack-plugin": "^3.2.0",
+    "js-yaml": "^3.12.0",
     "ts-loader": "^4.4.1",
     "ts-node": "^7.0.0",
     "typescript": "^2.9.2",
