--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,7 @@
     "clean": "rimraf build",
     "start": "concurrently \"yarn start:docs\" \"yarn start:webpack\"",
     "start:docs": "docusaurus-start",
-    "start:webpack": "webpack -w -d",
+    "start:webpack": "node scripts/copy-packs.js && webpack -w -d",
     "start:webpack-old": "webpack-dev-server -d --content-base ./static/",
     "build": "yarn packs && webpack -p && docusaurus-build",
     "packs": "rimraf ./static/packs && node scripts/copy-packs.js",
@@ -16,14 +16,19 @@
     "rename-version": "docusaurus-rename-version"
   },
   "dependencies": {
-    "@phensley/cldr": "^0.6.0",
+    "@phensley/cldr": "^0.6.3",
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.4",
+    "emotion": "^9.2.4",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-emotion": "^9.2.4",
     "react-redux": "^5.0.7",
+    "rebass": "^2.0.0",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
+    "styled-components": "^3.3.3",
     "wretch": "^1.3.1"
   },
   "devDependencies": {
