--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,7 @@
     "clean": "rimraf build",
     "start": "concurrently \"yarn start:docs\" \"yarn start:webpack\"",
     "start:docs": "docusaurus-start",
-    "start:webpack": "node scripts/copy-packs.js && webpack -w -d",
+    "start:webpack": "node scripts/copy-packs.js && webpack-dev-server -w -d",
     "start:webpack-old": "webpack-dev-server -d --content-base ./static/",
     "build": "yarn packs && webpack -p && docusaurus-build",
     "packs": "rimraf ./static/packs && node scripts/copy-packs.js",
@@ -16,7 +16,7 @@
     "rename-version": "docusaurus-rename-version"
   },
   "dependencies": {
-    "@phensley/cldr": "^0.6.3",
+    "@phensley/cldr": "^0.6.4",
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.4",
     "emotion": "^9.2.4",
