Upgrade to 0.6.7, many doc changes.

--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -20,7 +20,7 @@
   "include": [
     "./*.js",
     "liveapi/**/*",
-    "examples/*"
+    "examples/*.ts"
   ],
   "exclude": [
     "node_modules"
