--- a/website/package.json
+++ b/website/package.json
@@ -16,7 +16,7 @@
     "rename-version": "docusaurus-rename-version"
   },
   "dependencies": {
-    "@phensley/cldr": "^0.6.5",
+    "@phensley/cldr": "^0.6.7",
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.4",
     "emotion": "^9.2.4",
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@types/node": "8.10.20",
     "concurrently": "^3.6.0",
-    "docusaurus": "^1.3.0",
+    "docusaurus": "1.3.0",
     "html-webpack-plugin": "^3.2.0",
     "js-yaml": "^3.12.0",
     "ts-loader": "^4.4.1",
