--- a/website/package.json
+++ b/website/package.json
@@ -17,28 +17,33 @@
   },
   "dependencies": {
     "@phensley/cldr": "^0.6.8",
-    "@types/react": "^16.4.1",
-    "@types/react-dom": "^16.0.4",
     "emotion": "^9.2.4",
+    "icepick": "^2.3.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-emotion": "^9.2.4",
     "react-redux": "^5.0.7",
     "rebass": "^2.0.0",
-    "redux": "^4.0.0",
+    "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
     "styled-components": "^3.3.3",
     "wretch": "^1.3.1"
   },
   "devDependencies": {
+    "@types/icepick": "^1.3.0",
     "@types/node": "8.10.20",
+    "@types/react": "^16.4.1",
+    "@types/react-dom": "^16.0.4",
+    "@types/react-redux": "^6.0.3",
     "concurrently": "^3.6.0",
     "docusaurus": "1.3.0",
     "html-webpack-plugin": "^3.2.0",
     "js-yaml": "^3.12.0",
+    "ts-lint": "^4.5.1",
     "ts-loader": "^4.4.1",
     "ts-node": "^7.0.0",
+    "tslint-no-circular-imports": "^0.2.1",
     "typescript": "^2.9.2",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
