--- a/website/package.json
+++ b/website/package.json
@@ -20,11 +20,11 @@
     "emotion": "^9.2.4",
     "icepick": "^2.3.0",
     "prop-types": "^15.6.2",
+    "pure-store": "^0.3.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-emotion": "^9.2.4",
     "react-redux": "^5.0.7",
-    "rebass": "^2.0.0",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
     "styled-components": "^3.3.3",
@@ -45,6 +45,7 @@
     "ts-node": "^7.0.0",
     "tslint-no-circular-imports": "^0.2.1",
     "typescript": "^2.9.2",
+    "typescript-styled-plugin": "^0.8.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
