--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
+    "noResolve": false,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "traceResolution": false,
