--- a/website/package.json
+++ b/website/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@phensley/cldr": "^0.6.8",
+    "@types/react-router-dom": "^4.2.7",
     "emotion": "^9.2.4",
     "icepick": "^2.3.0",
     "prop-types": "^15.6.2",
@@ -25,6 +26,7 @@
     "react-dom": "^16.4.1",
     "react-emotion": "^9.2.4",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
     "styled-components": "^3.3.3",
