--- a/website/package.json
+++ b/website/package.json
@@ -16,7 +16,7 @@
     "rename-version": "docusaurus-rename-version"
   },
   "dependencies": {
-    "@phensley/cldr": "^0.7.3",
+    "@phensley/cldr": "^0.7.4",
     "@types/react-router-dom": "^4.2.7",
     "emotion": "^9.2.4",
     "icepick": "^2.3.0",
@@ -46,7 +46,7 @@
     "ts-loader": "^4.4.1",
     "ts-node": "^7.0.0",
     "tslint-no-circular-imports": "^0.2.1",
-    "typescript": "^2.9.2",
+    "typescript": "3.x",
     "typescript-styled-plugin": "^0.8.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
