--- a/website/package.json
+++ b/website/package.json
@@ -16,7 +16,7 @@
     "rename-version": "docusaurus-rename-version"
   },
   "dependencies": {
-    "@phensley/cldr": "^0.8.0",
+    "@phensley/cldr": "^0.8.3",
     "@types/react-router-dom": "^4.2.7",
     "emotion": "^9.2.4",
     "icepick": "^2.3.0",
@@ -46,8 +46,9 @@
     "ts-loader": "^4.4.1",
     "ts-node": "^7.0.0",
     "tslint-no-circular-imports": "^0.2.1",
-    "typescript": "3.x",
-    "typescript-styled-plugin": "^0.8.1",
+    "typescript": "*",
+    "typescript-styled-plugin": "^0.13.0",
+    "url-loader": "^1.0.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
