--- a/website/package.json
+++ b/website/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "author": "Patrick Hensley <pathensley@gmail.com>",
   "license": "Apache-2.0",
+  "version": "0.8.17",
   "scripts": {
     "clean": "rimraf build",
     "start": "concurrently \"yarn start:docs\" \"yarn start:webpack\"",
