--- a/website/package.json
+++ b/website/package.json
@@ -17,7 +17,7 @@
     "rename-version": "docusaurus-rename-version"
   },
   "dependencies": {
-    "@phensley/cldr": "0.10.2",
+    "@phensley/cldr": "latest",
     "@types/react-router-dom": "^4.2.7",
     "emotion": "^9.2.4",
     "icepick": "^2.3.0",
