--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -1,34 +1,32 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
     "target": "es5",
     "module": "commonjs",
-    "lib": ["es6", "dom"],
-    "sourceMap": false,
-    "allowJs": true,
-    "jsx": "react",
     "moduleResolution": "node",
-    "rootDir": "src",
+    "lib": ["es6", "dom"],
+		"jsx": "react",
+    "sourceMap": true,
+		"allowJs": true,
+		"rootDir": ".",
     "outDir": "lib",
-    "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
-		"resolveJsonModule": true,
+    "resolveJsonModule": true,
+		"esModuleInterop": true,
+		"strictNullChecks": true,
+		"suppressImplicitAnyIndexErrors": true,
+    "removeComments": false,
+    "strict": true,
     "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "traceResolution": false,
-    "listEmittedFiles": false,
-    "plugins": [
-      {
-        "name": "typescript-styled-plugin"
-      }
-    ]
-  },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": false,
+		"traceResolution": false,
+    "baseUrl": "."
+	},
+	"include": [
+		"src/**/*"
+	]
 }
+
