--- a/website/package.json
+++ b/website/package.json
@@ -12,7 +12,7 @@
     "start:webpack-old": "webpack-dev-server -d --content-base ./static/",
     "build": "yarn packs && webpack -p && docusaurus-build",
     "packs": "rimraf ./static/packs && node scripts/copy-packs.js",
-		"report": "source-map-explorer --html -m ./build/cldr-engine/liveapi/liveapi.js >report.html",
+    "report": "source-map-explorer --html -m ./build/cldr-engine/liveapi/liveapi.js >report.html",
     "write-translations": "docusaurus-write-translations",
     "version": "docusaurus-version",
     "rename-version": "docusaurus-rename-version"
@@ -32,6 +32,7 @@
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
     "styled-components": "^3.3.3",
+    "tslib": "^1.9.3",
     "wretch": "^1.3.1"
   },
   "devDependencies": {
