--- a/website/package.json
+++ b/website/package.json
@@ -18,7 +18,7 @@
     "rename-version": "docusaurus-rename-version"
   },
   "dependencies": {
-    "@phensley/cldr": "0.14.0-alpha.0",
+    "@phensley/cldr": "0.14.2",
     "@types/react-router-dom": "^4.2.7",
     "emotion": "^9.2.4",
     "icepick": "^2.3.0",
