--- a/website/package.json
+++ b/website/package.json
@@ -19,21 +19,21 @@
   },
   "dependencies": {
     "@phensley/cldr": "0.18.0-next.1",
-    "@types/react-router-dom": "^4.2.7",
-    "emotion": "^9.2.4",
-    "icepick": "^2.3.0",
-    "prop-types": "^15.6.2",
-    "pure-store": "^0.3.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-emotion": "^9.2.4",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "redux": "^3.7.2",
-    "redux-saga": "^0.16.0",
-    "styled-components": "^3.3.3",
-    "tslib": "^1.9.3",
-    "wretch": "^1.3.1"
+    "@types/react-router-dom": "4.3.5",
+    "emotion": "9.2.4",
+    "icepick": "2.3.0",
+    "prop-types": "15.6.2",
+    "pure-store": "0.3.2",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-emotion": "9.2.4",
+    "react-redux": "7.1.1",
+    "react-router-dom": "5.0.1",
+    "redux": "4.0.4",
+    "redux-saga": "1.1.1",
+    "styled-components": "3.3.3",
+    "tslib": "1.10.x",
+    "wretch": "1.3.1"
   },
   "devDependencies": {
     "@types/icepick": "^1.3.0",
@@ -42,7 +42,7 @@
     "@types/react-dom": "^16.0.4",
     "@types/react-redux": "^6.0.3",
     "concurrently": "^3.6.0",
-    "docusaurus": "1.11.1",
+    "docusaurus": "1.13.0",
     "html-webpack-plugin": "^3.2.0",
     "js-yaml": "^3.12.0",
     "source-map-explorer": "^1.8.0",
