--- a/website/package.json
+++ b/website/package.json
@@ -36,6 +36,7 @@
     "wretch": "1.3.1"
   },
   "devDependencies": {
+    "@types/deasync": "^0.1.0",
     "@types/icepick": "^1.3.0",
     "@types/node": "10.14.5",
     "@types/react": "^16.4.1",
@@ -43,6 +44,7 @@
     "@types/react-redux": "^6.0.3",
     "@types/yargs": "^13.0.2",
     "concurrently": "^3.6.0",
+    "deasync": "^0.1.15",
     "docusaurus": "1.13.0",
     "html-webpack-plugin": "^3.2.0",
     "js-yaml": "^3.12.0",
