--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -14,7 +14,7 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
-		"resolveJsonModule": false,
+		"resolveJsonModule": true,
 		"esModuleInterop": false,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
