--- a/website/package.json
+++ b/website/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "clean": "rimraf build",
     "deploy": "yarn build && USE_SSH=true docusaurus-publish",
-    "start": "node gencrossref.js && concurrently \"yarn start:docs\" \"yarn start:webpack\"",
-    "start:docs": "docusaurus-start",
+    "start": "rimraf build && node gencrossref.js && concurrently \"yarn start:docs\" \"yarn start:webpack\"",
+    "start:docs": "docusaurus-start --no-watch",
     "start:webpack": "node scripts/copy-packs.js && webpack-dev-server -w -d",
     "start:webpack-old": "webpack-dev-server -d --content-base ./static/",
     "build": "node gencrossref.js && yarn packs && webpack -p && docusaurus-build",
@@ -18,7 +18,7 @@
     "rename-version": "docusaurus-rename-version"
   },
   "dependencies": {
-    "@phensley/cldr": "0.21.0",
+    "@phensley/cldr": "0.22.0",
     "@types/react-router-dom": "4.3.5",
     "emotion": "9.2.4",
     "icepick": "2.3.0",
@@ -45,7 +45,7 @@
     "@types/yargs": "^13.0.2",
     "concurrently": "^3.6.0",
     "deasync": "^0.1.15",
-    "docusaurus": "1.13.0",
+    "docusaurus": "1.14.0",
     "html-webpack-plugin": "^3.2.0",
     "js-yaml": "^3.12.0",
     "source-map-explorer": "^1.8.0",
