--- a/website/package.json
+++ b/website/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "author": "Patrick Hensley <pathensley@gmail.com>",
   "license": "Apache-2.0",
-  "version": "0.8.17",
+  "version": "1.2.5",
   "scripts": {
     "clean": "rimraf build",
     "deploy": "yarn build && USE_SSH=true docusaurus-publish",
@@ -17,12 +17,13 @@
     "write-translations": "docusaurus-write-translations",
     "version": "docusaurus-version",
     "rename-version": "docusaurus-rename-version",
-		"link-all": "ls --color=none node_modules/@phensley | xargs -I % yarn link @phensley/%",
-		"unlink-all": "ls --color=none node_modules/@phensley | xargs -I % yarn unlink @phensley/%"
+    "link-all": "ls --color=none node_modules/@phensley | xargs -I % yarn link @phensley/%",
+    "unlink-all": "ls --color=none node_modules/@phensley | xargs -I % yarn unlink @phensley/%"
   },
   "dependencies": {
     "@phensley/cldr": "1.2.3",
     "@types/react-router-dom": "5.1.5",
+    "@types/styled-components": "5.1.11",
     "emotion": "10.0.27",
     "icepick": "2.4.0",
     "prop-types": "15.7.2",
@@ -34,7 +35,7 @@
     "react-router-dom": "5.1.2",
     "redux": "4.0.5",
     "redux-saga": "1.1.3",
-    "styled-components": "5.1.0",
+    "styled-components": "5.3.0",
     "tslib": "1.11.x",
     "wretch": "1.7.2"
   },
@@ -56,7 +57,7 @@
     "ts-loader": "^7.0.1",
     "ts-node": "^8.9.1",
     "tslint-no-circular-imports": "^0.7.0",
-    "typescript": "*",
+    "typescript": "3.9",
     "typescript-styled-plugin": "^0.15.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
