--- a/website/package.json
+++ b/website/package.json
@@ -8,7 +8,7 @@
     "deploy": "yarn build && USE_SSH=true docusaurus-publish",
     "start": "rimraf build && node gencrossref.js && concurrently \"yarn start:docs\" \"yarn start:webpack\"",
     "start:docs": "docusaurus-start --no-watch",
-    "start:webpack": "node scripts/copy-packs.js && webpack-dev-server -w -d",
+    "start:webpack": "node scripts/copy-packs.js && webpack serve --mode development",
     "start:webpack-old": "webpack-dev-server -d --content-base ./static/",
     "build": "node gencrossref.js && yarn packs && docusaurus-build",
     "build:wp": "node gencrossref.js && yarn packs && webpack -p && docusaurus-build",
@@ -22,47 +22,47 @@
   },
   "dependencies": {
     "@phensley/cldr": "1.3.1",
-    "@types/react-router-dom": "5.1.5",
-    "@types/styled-components": "5.1.11",
-    "emotion": "10.0.27",
+    "@types/react-router-dom": "5.1.8",
+    "@types/styled-components": "5.1.12",
+    "emotion": "11.0.0",
     "icepick": "2.4.0",
     "prop-types": "15.7.2",
-    "pure-store": "1.0.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "pure-store": "1.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-emotion": "10.0.0",
-    "react-redux": "7.2.0",
-    "react-router-dom": "5.1.2",
-    "redux": "4.0.5",
+    "react-redux": "7.2.4",
+    "react-router-dom": "5.2.0",
+    "redux": "4.1.1",
     "redux-saga": "1.1.3",
     "styled-components": "5.3.0",
-    "tslib": "1.11.x",
-    "wretch": "1.7.2"
+    "tslib": "2.3.x",
+    "wretch": "1.7.6"
   },
   "devDependencies": {
-    "@types/deasync": "^0.1.0",
+    "@types/deasync": "^0.1.1",
     "@types/icepick": "^2.3.0",
-    "@types/node": "13.13.4",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.7",
-    "@types/react-redux": "^7.1.7",
-    "@types/yargs": "^15.0.4",
-    "concurrently": "^5.2.0",
-    "deasync": "^0.1.20",
-    "docusaurus": "1.14.4",
-    "html-webpack-plugin": "^4.3.0",
-    "js-yaml": "^3.13.1",
-    "source-map-explorer": "^2.4.2",
+    "@types/node": "16.6.1",
+    "@types/react": "^17.0.18",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18",
+    "@types/yargs": "^17.0.2",
+    "concurrently": "^6.2.1",
+    "deasync": "^0.1.22",
+    "docusaurus": "1.14.7",
+    "html-webpack-plugin": "^5.3.2",
+    "js-yaml": "^4.1.0",
+    "source-map-explorer": "^2.5.2",
     "ts-lint": "^4.5.1",
-    "ts-loader": "^7.0.1",
-    "ts-node": "^8.9.1",
+    "ts-loader": "^9.2.5",
+    "ts-node": "^10.2.0",
     "tslint-no-circular-imports": "^0.7.0",
-    "typescript": "3.9",
-    "typescript-styled-plugin": "^0.15.0",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "yargs": "^15.3.1"
+    "typescript": "4.3",
+    "typescript-styled-plugin": "^0.18.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^3.11.2",
+    "yargs": "^17.1.1"
   }
 }
