--- a/website/package.json
+++ b/website/package.json
@@ -2,10 +2,11 @@
   "private": true,
   "author": "Patrick Hensley <pathensley@gmail.com>",
   "license": "Apache-2.0",
-  "version": "1.2.5",
+  "version": "1.5.1",
   "scripts": {
     "clean": "rimraf build",
     "deploy": "yarn build && USE_SSH=true docusaurus-publish",
+    "generate": "ts-node src/docgen/index.ts",
     "start": "rimraf build && node gencrossref.js && concurrently \"yarn start:docs\" \"yarn start:webpack\"",
     "start:docs": "docusaurus-start --no-watch",
     "start:webpack": "node scripts/copy-packs.js && webpack serve --mode development",
@@ -15,54 +16,54 @@
     "packs": "rimraf ./static/packs && node scripts/copy-packs.js",
     "report": "source-map-explorer --html -m ./build/cldr-engine/liveapi/liveapi.js >report.html",
     "write-translations": "docusaurus-write-translations",
-    "version": "docusaurus-version",
+    "new-version": "docusaurus-version",
     "rename-version": "docusaurus-rename-version",
     "link-all": "ls --color=none node_modules/@phensley | xargs -I % yarn link @phensley/%",
     "unlink-all": "ls --color=none node_modules/@phensley | xargs -I % yarn unlink @phensley/%"
   },
   "dependencies": {
-    "@phensley/cldr": "1.5.0",
-    "@types/react-router-dom": "5.1.8",
-    "@types/styled-components": "5.1.12",
+    "@phensley/cldr": "1.5.1",
+    "@types/react-router-dom": "5.3.3",
+    "@types/styled-components": "5.1.26",
     "emotion": "11.0.0",
     "icepick": "2.4.0",
-    "prop-types": "15.7.2",
+    "prop-types": "15.8.1",
     "pure-store": "1.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-emotion": "10.0.0",
-    "react-redux": "7.2.4",
-    "react-router-dom": "5.2.0",
-    "redux": "4.1.1",
+    "react-redux": "8.0.2",
+    "react-router-dom": "6.3.0",
+    "redux": "4.2.0",
     "redux-saga": "1.1.3",
-    "styled-components": "5.3.0",
-    "tslib": "2.3.x",
-    "wretch": "1.7.6"
+    "styled-components": "5.3.5",
+    "tslib": "2.4.x",
+    "wretch": "2.0.2"
   },
   "devDependencies": {
-    "@types/deasync": "^0.1.1",
+    "@types/deasync": "^0.1.2",
     "@types/icepick": "^2.3.0",
-    "@types/node": "16.6.1",
-    "@types/react": "^17.0.18",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.18",
-    "@types/yargs": "^17.0.2",
-    "concurrently": "^6.2.1",
-    "deasync": "^0.1.22",
+    "@types/node": "18.7.2",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
+    "@types/yargs": "^17.0.11",
+    "concurrently": "^7.3.0",
+    "deasync": "^0.1.28",
     "docusaurus": "1.14.7",
-    "html-webpack-plugin": "^5.3.2",
+    "html-webpack-plugin": "^5.5.0",
     "js-yaml": "^4.1.0",
     "source-map-explorer": "^2.5.2",
     "ts-lint": "^4.5.1",
-    "ts-loader": "^9.2.5",
-    "ts-node": "^10.2.0",
+    "ts-loader": "^9.3.1",
+    "ts-node": "^10.9.1",
     "tslint-no-circular-imports": "^0.7.0",
-    "typescript": "4.3",
-    "typescript-styled-plugin": "^0.18.1",
+    "typescript": "4.7",
+    "typescript-styled-plugin": "^0.18.2",
     "url-loader": "^4.1.1",
-    "webpack": "^5.50.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^3.11.2",
-    "yargs": "^17.1.1"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.0",
+    "yargs": "^17.5.1"
   }
 }
