--- a/website/package.json
+++ b/website/package.json
@@ -22,7 +22,7 @@
     "unlink-all": "ls --color=none node_modules/@phensley | xargs -I % yarn unlink @phensley/%"
   },
   "dependencies": {
-    "@phensley/cldr": "1.10.2",
+    "@phensley/cldr": "1.12.0",
     "@types/react-router-dom": "5.3.3",
     "@types/styled-components": "5.1.26",
     "emotion": "11.0.0",
@@ -61,7 +61,7 @@
     "typescript": "5.1",
     "typescript-styled-plugin": "^0.18.2",
     "url-loader": "^4.1.1",
-    "webpack": "^5.88.1",
+    "webpack": "5.88.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "yargs": "^17.7.2"
